[package]
name = "aleph-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aleph_api"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
aleph_client = "3.0.0"
reqwest = { version = "0.11.22", features = ["json"] }
pyo3-asyncio = { version = "0.20", features = ["attributes", "async-std-runtime"] }
async-std = {version = "1.9", features = ["attributes", "tokio1"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
